# openhands-ext

./: COMPARISON_ANALYSIS.md  README.md  pyproject.toml  requirements-test.txt  test_extension.py  test_extension_pytest.py
docs/: architecture_path.md  decoupling-strategy.md  di-extensions.md  enterprise-architecture-analysis.md  enterprise-integration-patterns.md  usage.md
openhands_ext/: __init__.py  component_stubs.py  config.py  contrib.py  ext.py  test_multiuser.py  test_storage.py
tests/: test_extension.py
